# eta

./: eta.cabal  stack.yaml
compiler/Eta/REPL/: UI.hs
eta-ide/: eta-ide.cabal
eta-ide/Eta/IDE/: JSON.hs
eta-ide/Eta/REPL/: UI.hs
eta-ide/src/: Main.hs
